--- a/1.html
+++ b/1.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Likelion git - 1번 문제</title>
+    <style>
+        .title_1 {
+            color: red;
+        }
+
+        .title_2 {
+            color: royalblue;
+        }
+    </style>
 </head>
 
 <body>
-    
-    <h1 style="color: red;">Possibility To Reality</h1>
-    <h1 style="color: royalblue">당신의 내일과 가장 가까운 오늘을 만듭니다.</h1>
-    
+
+    <h1 class="title_1">Possibility To Reality</h1>
+    <h1 class="title_2">당신의 내일과 가장 가까운 오늘을 만듭니다.</h1>
+
 </body>
+
 </html>
