2번 했습니다

--- a/2.html
+++ b/2.html
@@ -32,7 +32,13 @@
    }
 
    /*여기에 작성*/
-
+   div.MBTI {
+    background-color: lightblue;
+    font-size: 50px;
+    text-align: center;
+    margin-left: 500px; 
+    margin-right: 500px;
+   }
    
 
    </style>
@@ -42,7 +48,14 @@
    <p>안녕하세요, 당신의 mbti가 궁금합니다!</p>
 
    <!-- 여기에 코드 작성 -->
-
+    <div class="MBTI">
+        전주원 ISFJ <br>
+        이상혁 ESTP <br>
+        한은선 ENFJ <br>
+        김나현 ISTP <br>
+        김예은 ISTJ <br>
+        이동령 ENFJ <br>
+    </div>
 
    </body>
 </html>
