--- a/4.html
+++ b/4.html
@@ -16,7 +16,7 @@ html, body {
 		height: 100%;
 		min-height: 100%;
 		display: flex;
-		flex-direction: column;;
+		flex-direction: row-reverse;
 		
 }
 	
@@ -35,9 +35,7 @@ html, body {
 }
 .box-1 {
 		background-color: rgb(248, 223, 227);
-		height: 60px; 
-    
-
+		flex: 1;
 }
 	
 .box-2 {
@@ -47,7 +45,7 @@ html, body {
 	
 .box-3 {
 		background-color: rgb(246, 142, 158);
-		height: 60px; 
+		flex: 1;
 }
 		
 
