--- a/page.html
+++ b/page.html
@@ -33,7 +33,7 @@
       </div>
         <div class="nav1">
             <li><a href="mine.html">home</a></li>
-            <li><a href="https://blog.naver.com/john8538/223089739259"> about</a></li>
+            <li><a href="https://blog.naver.com/john8538/223089739259" target="_blank"> about</a></li>
         </div>
             <div class="nav2">
                 <li><a href="dream.html" target="_blank">dream</a></li>
