--- a/mine.html
+++ b/mine.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>👻lex_xsh</title>
     <link rel="stylesheet" href="mine.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon_package_v0.16/favicon-32x32.png" />
     <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
 </head> 
 
-<body id="all">
+<body id="all"> 
     <img src="./img/ZIBRI.gif">
     
     <a href="./page.html"><button>👋👋👋</a>
