--- a/dream.html
+++ b/dream.html
@@ -22,9 +22,9 @@
             </div>
     </div>
     <div class = "project">
-        <a href="#"> coming up!</a>
-        <a href="#"> coming up!</a>
-        <a href="#"> coming up!</a>
+        <a href="#"> 미래의 인하대 해커톤 수상작</a>
+        <a href="#"> 미래의 중간 해커톤 대상작</a>
+        <a href="#"> 미래의 취뽀</a>
     </div>
 </body>
 </html>
