--- a/page.html
+++ b/page.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon_package_v0.16/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Schoolbell&family=Righteous&family=Poor+Story&family=Dongle:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&family=Righteous&family=Poor+Story&family=Dongle:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="page.css">
     <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
     
@@ -20,6 +20,23 @@
       <div class="color"></div>
     </div>
   </div>
+  <div id="modal" class="modal-overlay">
+    <div class="modal-window">
+        <div class="title">
+            <h2>Contact</h2>
+        </div>
+        <div class="footer">
+          <ul>
+              <li><a href="https://github.com/lexxsh" target="blank"><i class="fab fa-github"></i></i></a></li>
+              <li><a href="https://www.instagram.com/lex__xsh/" target="blank"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://velog.io/@lexxsh" target="blank"><i class="fab fa-velog">V</i></a></li>
+              <li><a href="https://blog.naver.com/john8538" target="blank"><i class="fab fa-velog">B</i></a></li>
+          </ul>
+          <p>📧 john8538@naver.com 📱010-8869-2796</p>
+      </div>
+        <div class="close-area">X</div>
+    </div>
+</div>
   <div class="logo">
     wwww
   </div>
@@ -38,9 +55,10 @@
         </div>
             <div class="nav2">
                 <li><a href="dream.html" target="_blank">dream</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#" id="btn-modal">contact</a></li>
             </div>
     </div>
+
     <div class="menu">
         <li><a href="#top">🏠</a></li>
         <li><a href="#major">🤷</a></li>
@@ -410,15 +428,8 @@
     </section>
     <section id="contact">
       <p>📧 john8538@naver.com 📱010-8869-2796</p>
-      <div class="footer">
-        <ul>
-            <li><a href="https://github.com/lexxsh" target="blank"><i class="fab fa-github"></i></i></a></li>
-            <li><a href="https://www.instagram.com/lex__xsh/" target="blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://velog.io/@lexxsh" target="blank"><i class="fab fa-velog">V</i></a></li>
-            <li><a href="https://blog.naver.com/john8538" target="blank"><i class="fab fa-velog">B</i></a></li>
-        </ul>
-    </div>
     </section>
     </div>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
