--- a/dream.html
+++ b/dream.html
@@ -7,9 +7,27 @@
     <link rel="shortcut icon" type="image/x-icon" href="./favicon_package_v0.16/favicon-32x32.png" />
     <link href="https://fonts.googleapis.com/css2?family=Schoolbell&family=Righteous&family=Poor+Story&family=Dongle:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dream.css">
+    <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
     <title>🚧Project - 미완성🚧</title>
 </head>
 <body>
+    <div id="modal" class="modal-overlay">
+        <div class="modal-window">
+            <div class="title">
+                <h2>Contact</h2>
+            </div>
+            <div class="footer">
+              <ul>
+                  <li><a href="https://github.com/lexxsh" target="blank"><i class="fab fa-github"></i></i></a></li>
+                  <li><a href="https://www.instagram.com/lex__xsh/" target="blank"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="https://velog.io/@lexxsh" target="blank"><i class="fab fa-velog">V</i></a></li>
+                  <li><a href="https://blog.naver.com/john8538" target="blank"><i class="fab fa-velog">B</i></a></li>
+              </ul>
+              <p>📧 john8538@naver.com 📱010-8869-2796</p>
+          </div>
+            <div class="close-area">X</div>
+        </div>
+    </div>
     <div class="header">
         <a href="dream.html" class="logo">Project</a>
         <div class="nav1">
@@ -18,7 +36,7 @@
         </div>
             <div class="nav2">
                 <li><a href="dream.html">dream</a></li>
-                <li><a href="page.html#contact">contact</a></li>
+                <li><a href="#" id="btn-modal">contact</a></li>
             </div>
     </div>
     <div class = "project">
@@ -26,5 +44,6 @@
         <a href="#"> 미래의 중간 해커톤 대상작</a>
         <a href="#"> 미래의 취뽀</a>
     </div>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
