--- a/mine.html
+++ b/mine.html
@@ -14,8 +14,7 @@
 <body id="all"> 
     <img src="./img/ZIBRI.gif">
     
-    <a href="./page.html"><button>👋👋👋</a>
-    </a></button>
+    <a href="./page.html"><button>👋👋👋</a></button>
     <div class="content">
         <div class="content__container">
           <p class="content__container__text">
