--- a/page.html
+++ b/page.html
@@ -74,6 +74,7 @@
             <img src="./img/background.jpg">
             <img src="./img/aUgdt8V.jpg">
         </div>
+        
         </section>
     </div>
         
@@ -103,7 +104,7 @@
           <p>좋은 향이랑 이쁘고 멋있는거 재밌는거 좋아해요🤍</p>
           <p>음악과  <a href = #cafe><span>커피, 맛있는게</span></a> 삶에 전부라고 생각해요.</p>
       </div>
-        <img id="major_img" src="./img/head.jpg">
+        <img id="major_img" src="./img/head.jpg"alt="opacity-image" class="opacity-image">
     </section>
     <section id="cafe">
       <a href="https://map.naver.com/v5/search/%EB%B2%A0%EC%9D%B4%EC%9B%90/place/1566807642?c=15,0,0,0,dh&placePath=%3Fentry%253Dbmp"
