--- a/page.html
+++ b/page.html
@@ -120,7 +120,11 @@
           <div class="speech_bubble_content"> 뭐가 됐든 성취가 내 목적😺 엉뚱하면서도 자신감이 넘쳐요!! 이쁘게 봐주세요 🤩
           </div>
           </div>
-          <p>한가지 일에 빠지면 몰두하는 성격이에요.</p>
+          <div class="speech_bubble">
+          <p><span>한가지 일</span>에 빠지면 몰두하는 성격이에요.</p>
+          <div class="speech_bubble_content"> 롤 10년차.. 요즘은 운동, 건강, 새로운 취미 개발에 몰두중 이에요!
+          </div>
+        </div>
           <p>좋은 향이랑 이쁘고 멋있는거 재밌는거 좋아해요🤍</p>
           <p>음악과  <a href = #cafe><span>커피, 맛있는게</span></a> 삶에 전부라고 생각해요.</p>
       </div>
