--- a/page.html
+++ b/page.html
@@ -422,7 +422,7 @@
           <div class="play-now__icon">
             <i class="fas fa-step-backward fa-xs"></i>
             <div class="pause">
-              <audio id= "sometimes"src="./mp3/crush.mp3" loop controls></audio>
+              <audio id= "sometimes"src="./mp3/crush.mp3" onloadstart="this.volume=0.5"autoplay loop controls></audio>
             </div>
             <i class="fas fa-step-forward fa-xs"></i>
           </div>
@@ -450,7 +450,7 @@
           <i class="fas fa-sync-alt fa-xs"></i>
           <i class="fas fa-step-backward fa-xs"></i>
           <div class="pause">
-            <audio id= "teddy_bear"src="./mp3/STAYC - Teddy Bear [321 kbps].mp3" autoplay loop controls></audio>
+            <audio id= "teddy_bear"src="./mp3/STAYC - Teddy Bear [321 kbps].mp3"  loop controls></audio>
           </div>
           <i class="fas fa-step-forward fa-xs"></i>
           <i class="fas fa-random fa-xs"></i>
