--- a/dream.html
+++ b/dream.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="header">
-        <a href="dream.html" class="logo">Project</a>
+        <a href="page.html" class="logo">Project</a>
         <div class="nav1">
             <li><a href="mine.html">home</a></li>
             <li><a href="https://blog.naver.com/john8538/223089739259"> about</a></li>
