주소 및 이미지 관련 수정

--- a/Like_lion_pj/dream.html
+++ b/Like_lion_pj/dream.html
@@ -40,9 +40,9 @@
             </div>
     </div>
     <div class = "project">
-        <a href="#"> 미래의 인하대 해커톤 수상작</a>
-        <a href="#"> 미래의 중간 해커톤 대상작</a>
-        <a href="#"> 미래의 취뽀</a>
+        <a href="https://mirror-product-be5.notion.site/POPCON-dccc20e37f7440ac8900c76cfa99953b"> 멋사 11기 중앙해커톤!</a>
+        <a href="https://mirror-product-be5.notion.site/Innothink-c37e7524632d4a9eb1a8a38c2177ed7a">2023 Innothink Makerthon</a>
+        <a href="#"> 미래의 취뽀 - 언제가 될지는 몰라요,,,</a>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
