--- a/Like_lion_pj/page.html
+++ b/Like_lion_pj/page.html
@@ -51,7 +51,7 @@
       </div>
         <div class="nav1">
             <li><a href="mine.html">home</a></li>
-            <li><a href="https://blog.naver.com/john8538/223089739259" target="_blank"> about</a></li>
+            <li><a href="https://mirror-product-be5.notion.site/ad1b04fdae9e409983d079bdb57edd29" target="_blank"> about</a></li>
         </div>
             <div class="nav2">
                 <li><a href="dream.html" target="_blank">dream</a></li>
