--- a/Like_lion_pj/page.html
+++ b/Like_lion_pj/page.html
@@ -47,7 +47,7 @@
         <div class="clouds"></div>
     <div class="header">
       <div class="WWW">
-        <a href="page.html">LEX_XSH</a>
+        <a href="https://blog.naver.com/john8538/223089739259">LEX_XSH</a>
       </div>
         <div class="nav1">
             <li><a href="mine.html">home</a></li>
